EUAC1-60 print invoice modified: inv total calculated and passed to html through findById method